# virtualgamepad

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
crates/gr-backend-api/: Cargo.toml
crates/gr-backend-api/src/: lib.rs
crates/gr-cli/: Cargo.toml
crates/gr-cli/src/: lib.rs  phase4.rs  phase7.rs
crates/gr-cli/src/snapshots/: gr_cli__tests__capability_coverage.snap  gr_cli__tests__compare_real_device_dualsense_bluetooth.snap  gr_cli__tests__compare_real_device_dualsense_transport_usb.snap  gr_cli__tests__compare_real_device_dualsense_usb.snap  gr_cli__tests__list_profiles.snap  gr_cli__tests__plan_session_identity_aware.snap  gr_cli__tests__plan_session_macos_hardware_faithful.snap  gr_cli__tests__plan_session_macos_identity_aware.snap  gr_cli__tests__plan_session_rejection.snap  gr_cli__tests__plan_session_transport_hardware_faithful.snap  gr_cli__tests__plan_session_windows_identity_aware.snap  gr_cli__tests__replay_trace_dualsense_phase6.snap  gr_cli__tests__replay_trace_dualsense_transport_phase10.snap  gr_cli__tests__replay_trace_fake_rumble.snap  gr_cli__tests__replay_trace_xbox360_phase6.snap  gr_cli__tests__run_transport_smoke_dualsense.snap  gr_cli__tests__run_uhid_smoke_dualsense_bluetooth.snap  gr_cli__tests__run_uhid_smoke_dualsense_usb.snap  gr_cli__tests__run_uinput_smoke_generic_gamepad.snap  gr_cli__tests__show_capabilities_dualsense.snap  gr_cli__tests__show_capabilities_xbox360.snap  gr_cli__tests__simulate_session_dualsense_coalesce.snap  gr_cli__tests__simulate_session_fake_rumble.snap  gr_cli__tests__support_report_dualsense_identity.snap  gr_cli__tests__support_report_dualsense_transport.snap  gr_cli__tests__support_report_generic_gamepad_compatibility.snap  gr_cli__tests__validate_config_dualsense_identity.snap  gr_cli__tests__validate_fixture_dualsense.snap  gr_cli__tests__validate_fixture_reverse_event.snap
crates/gr-config/: Cargo.toml
crates/gr-config/fixtures/: invalid-broken-mode.yaml  invalid-unknown-top-level.yaml  strict-unknown-provider.yaml  strict-unknown-session-key.yaml  warn-unknown-provider.yaml  warn-unknown-session-key.yaml  warn-unsupported-fidelity.yaml
crates/gr-config/src/: lib.rs
crates/gr-config/src/snapshots/: gr_config__tests__valid_dualsense_identity.snap
crates/gr-core/: Cargo.toml
crates/gr-core/fixtures/: payload-dualsense-neutral.yaml
crates/gr-core/src/: lib.rs
crates/gr-core/src/snapshots/: gr_core__tests__backend-family-linux-transport-bluetooth.snap  gr_core__tests__backend-family-linux-transport-usb.snap  gr_core__tests__backend-family-linux-uhid.snap  gr_core__tests__backend-family-linux-uinput.snap  gr_core__tests__backend-family-macos-hid.snap  gr_core__tests__backend-family-windows-hid.snap  gr_core__tests__backend-family.snap  gr_core__tests__backend-level-evdev.snap  gr_core__tests__backend-level-hid.snap  gr_core__tests__backend-level-transport.snap  gr_core__tests__backend-level.snap  gr_core__tests__capability-category-audio.snap  gr_core__tests__capability-category-button.snap  gr_core__tests__capability-category-haptic.snap  gr_core__tests__capability-category-lighting.snap  gr_core__tests__capability-category-motion-sensor.snap  gr_core__tests__capability-category-stick.snap  gr_core__tests__capability-category-system.snap  gr_core__tests__capability-category-touch-surface.snap  gr_core__tests__capability-category-trigger.snap  gr_core__tests__capability-category.snap  gr_core__tests__dualsense-neutral-frame.snap  gr_core__tests__dualsense-neutral-payload.snap  gr_core__tests__fidelity-tier-compatibility.snap  gr_core__tests__fidelity-tier-hardware-faithful.snap  gr_core__tests__fidelity-tier-identity-aware.snap  gr_core__tests__fidelity-tier.snap
crates/gr-core/tests/: fixture_loading.rs
crates/gr-host-bridge/: Cargo.toml
crates/gr-host-bridge/src/: lib.rs
crates/gr-planner/: Cargo.toml
crates/gr-planner/src/: lib.rs
crates/gr-planner/src/snapshots/: gr_planner__tests__empty_inventory_rejection.snap  gr_planner__tests__hardware_faithful_degrades_to_identity_aware.snap  gr_planner__tests__hardware_faithful_linux_transport_usb.snap  gr_planner__tests__identity_aware_linux_uhid.snap
crates/gr-profiles/: Cargo.toml
crates/gr-profiles/src/: lib.rs
crates/gr-profiles/src/snapshots/: gr_profiles__tests__built-in-profile-ids.snap  gr_profiles__tests__profile-dualsense.snap  gr_profiles__tests__profile-generic-gamepad.snap  gr_profiles__tests__profile-steam-controller.snap  gr_profiles__tests__profile-xbox360.snap
crates/gr-provider-linux-transport/: Cargo.toml
crates/gr-provider-linux-transport/fixtures/: dualsense-usb-enumeration.yaml
crates/gr-provider-linux-transport/src/: kernel.rs  lib.rs
crates/gr-provider-linux-uhid/: Cargo.toml
crates/gr-provider-linux-uhid/src/: kernel.rs  lib.rs
crates/gr-provider-linux-uinput/: Cargo.toml
crates/gr-provider-linux-uinput/src/: kernel.rs  lib.rs
crates/gr-provider-macos-hid/: Cargo.toml  README.md
crates/gr-provider-macos-hid/src/: lib.rs
crates/gr-runtime-model/: Cargo.toml
crates/gr-runtime-model/src/: lib.rs
crates/gr-runtime-model/src/snapshots/: gr_runtime_model__tests__controller_output_command.snap  gr_runtime_model__tests__plan_rejection.snap  gr_runtime_model__tests__session_plan.snap  gr_runtime_model__tests__session_status.snap
crates/gr-session/: Cargo.toml
crates/gr-session-options/: Cargo.toml
crates/gr-session-options/src/: lib.rs
crates/gr-session/src/: lib.rs
crates/gr-testkit/: Cargo.toml
crates/gr-testkit/src/: lib.rs
crates/gr-testkit/src/assertions/: mod.rs
crates/gr-testkit/tests/: dualsense_fixture.rs  phase4_fixtures.rs
crates/gr-translators/: Cargo.toml
crates/gr-translators/fixtures/: dualsense-buttons-roundtrip.yaml  dualsense-rumble-from-host.yaml  steam-controller-lighting.yaml  xbox360-evdev-roundtrip.yaml
crates/gr-translators/src/: lib.rs
demo/: Cargo.toml  README.md
demo/src/: main.rs  phase_gate.rs
demo/src/snapshots/: vgpd_demo__tests__show_types.snap
(+109 files in other folders)
