[package]
name = "virtual_gamepad"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
description = "Create virtual gamepad devices that emulate physical hardware at varying accuracy levels."
repository = "https://github.com/anderstvoss/virtualgamepad"
readme = "README.md"
keywords = ["gamepad", "controller", "input", "virtual"]
categories = ["emulators", "hardware-support", "simulation"]
authors = ["Anders Voss <anderstvoss@gmail.com>"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
