[workspace]
members = [
    "crates/gr-core",
    "crates/gr-profiles",
    "crates/gr-config",
    "crates/gr-session-options",
    "crates/gr-runtime-model",
    "crates/gr-backend-api",
    "crates/gr-planner",
    "crates/gr-translators",
    "crates/gr-session",
    "crates/gr-host-bridge",
    "crates/gr-provider-linux-uinput",
    "crates/gr-provider-linux-uhid",
    "crates/gr-provider-linux-transport",
    "crates/gr-provider-windows-hid",
    "crates/gr-provider-macos-hid",
    "crates/gr-testkit",
    "crates/gr-cli",
    "demo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/anderstvoss/virtualgamepad"
authors = ["Anders Voss <anderstvoss@gmail.com>"]

[workspace.dependencies]
assert_matches = "1.5"
clap = { version = "4", features = ["derive"] }
insta = "1"
proptest = "1"
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
