[package]
name = "virtualgamepad"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Workspace root package and provider feature host for virtualgamepad."
publish = false

[workspace]
members = [
    "crates/gr-core",
    "crates/gr-profiles",
    "crates/gr-config",
    "crates/gr-session-options",
    "crates/gr-runtime-model",
    "crates/gr-backend-api",
    "crates/gr-planner",
    "crates/gr-translators",
    "crates/gr-session",
    "crates/gr-host-bridge",
    "crates/gr-provider-linux-uinput",
    "crates/gr-provider-linux-uhid",
    "crates/gr-provider-linux-transport",
    "crates/gr-provider-windows-hid",
    "crates/gr-provider-macos-hid",
    "crates/gr-testkit",
    "crates/gr-cli",
    "demo",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/anderstvoss/virtualgamepad"
authors = ["Anders Voss <anderstvoss@gmail.com>"]

[workspace.dependencies]
assert_matches = "1.5"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
insta = "1"
proptest = "1"
rstest = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smallvec = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[features]
default = [
    "provider-linux-uinput",
    "provider-linux-uhid",
    "provider-linux-transport",
    "provider-windows-hid",
    "provider-macos-hid",
]
provider-linux-uinput = ["dep:gr-provider-linux-uinput"]
provider-linux-uhid = ["dep:gr-provider-linux-uhid"]
provider-linux-transport = ["dep:gr-provider-linux-transport"]
provider-windows-hid = ["dep:gr-provider-windows-hid"]
provider-macos-hid = ["dep:gr-provider-macos-hid"]

[target.'cfg(target_os = "linux")'.dependencies]
gr-provider-linux-uinput = { path = "crates/gr-provider-linux-uinput", optional = true }
gr-provider-linux-uhid = { path = "crates/gr-provider-linux-uhid", optional = true }
gr-provider-linux-transport = { path = "crates/gr-provider-linux-transport", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
gr-provider-windows-hid = { path = "crates/gr-provider-windows-hid", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
gr-provider-macos-hid = { path = "crates/gr-provider-macos-hid", optional = true }

[lints]
workspace = true
