[package]
name = "virtual_gamepad_demo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
description = "Demo program for virtualgamepad; grows from a CLI scaffold into a GUI controller visualizer alongside the library."
publish = false
authors = ["Anders Voss <anderstvoss@gmail.com>"]

[[bin]]
name = "vgpd-demo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
virtual_gamepad = { path = ".." }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
