[package]
name = "virtual_gamepad_demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Demo program for virtualgamepad; grows from a CLI scaffold into a GUI controller visualizer alongside the library."
publish = false
repository.workspace = true
authors.workspace = true

[[bin]]
name = "vgpd-demo"
path = "src/main.rs"

[dependencies]
clap.workspace = true
gr-cli = { path = "../crates/gr-cli" }

[lints]
workspace = true
