[package]
name = "gr-backend-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend API contracts for virtualgamepad."

[dependencies]
gr-core = { path = "../gr-core", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
