[package]
name = "gr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal and CI tooling for virtualgamepad."

[[bin]]
name = "gr-cli"
path = "src/bin/gr-cli.rs"

[dependencies]
clap.workspace = true
ctrlc.workspace = true
gr-backend-api = { path = "../gr-backend-api", version = "0.1" }
gr-config = { path = "../gr-config", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-host-bridge = { path = "../gr-host-bridge", version = "0.1" }
gr-planner = { path = "../gr-planner", version = "0.1" }
gr-profiles = { path = "../gr-profiles", version = "0.1" }
gr-provider-linux-uhid = { path = "../gr-provider-linux-uhid", version = "0.1" }
gr-provider-linux-uinput = { path = "../gr-provider-linux-uinput", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }
gr-session = { path = "../gr-session", version = "0.1" }
gr-session-options = { path = "../gr-session-options", version = "0.1" }
gr-testkit = { path = "../gr-testkit", version = "0.1" }
gr-translators = { path = "../gr-translators", version = "0.1" }
serde.workspace = true
smallvec.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
