[package]
name = "gr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain primitives for virtualgamepad."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
