[package]
name = "gr-provider-linux-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux transport provider foundation for virtualgamepad."

[lints]
workspace = true
