[package]
name = "gr-provider-linux-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux transport provider foundation for virtualgamepad."

[dependencies]
gr-backend-api = { path = "../gr-backend-api", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-profiles = { path = "../gr-profiles", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }
gr-testkit = { path = "../gr-testkit", version = "0.1" }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lints]
workspace = true
