[package]
name = "gr-provider-linux-uhid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linux UHID provider for virtualgamepad."

[dependencies]
gr-backend-api = { path = "../gr-backend-api", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }

[lints]
workspace = true
