[package]
name = "gr-provider-macos-hid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "macOS HID provider foundation for virtualgamepad."

[dependencies]
gr-backend-api = { path = "../gr-backend-api", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-profiles = { path = "../gr-profiles", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }

[lints]
workspace = true
