[package]
name = "gr-runtime-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Runtime models for virtualgamepad."

[dependencies]
gr-core = { path = "../gr-core", version = "0.1" }
serde.workspace = true

[dev-dependencies]
insta.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
