[package]
name = "gr-session-options"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Session option models for virtualgamepad."

[dependencies]
gr-config = { path = "../gr-config", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
