[package]
name = "gr-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Testing tooling and fixtures for virtualgamepad."

[dependencies]
serde.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
