[package]
name = "gr-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Testing tooling and fixtures for virtualgamepad."

[dependencies]
gr-core = { path = "../gr-core", version = "0.1" }
proptest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
