[package]
name = "gr-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Testing tooling and fixtures for virtualgamepad."

[dependencies]
gr-backend-api = { path = "../gr-backend-api", version = "0.1" }
gr-core = { path = "../gr-core", version = "0.1" }
gr-host-bridge = { path = "../gr-host-bridge", version = "0.1" }
gr-profiles = { path = "../gr-profiles", version = "0.1" }
gr-runtime-model = { path = "../gr-runtime-model", version = "0.1" }
gr-session = { path = "../gr-session", version = "0.1" }
gr-session-options = { path = "../gr-session-options", version = "0.1" }
proptest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true

[lints]
workspace = true
